# garnet

./: .clang-format  .gitattributes  .gitconfig  .gitignore  .gitmodules  CMakeLists.txt  Jamroot  LICENSE  README  README.md  SConsInstallBinaries  SConsInstallManualAndHeaders  SConscript  SConstruct  SConstruct2  build.xml  notes-to-ai-agent.md  setupenv.cmd  setupenv.sh
src/contrib/src/: CMakeLists.txt  expat_build.h.in  makefile.scons
src/contrib/src/assimp/: HMPFileData.h  IFF.h  JoinVerticesProcess.h  LWOAnimation.cpp  MDCFileData.h  ObjFileMtlImporter.cpp  ObjFileParser.cpp  ObjTools.h  PlyLoader.h  ProcessHelper.h  SMDLoader.h  STLLoader.h  VertexTriangleAdjacency.h
src/contrib/src/expat/: config.h
src/contrib/src/freetype-2.8.1/: makefile.scons
src/contrib/src/jpeg/: jcapimin.c  jcdctmgr.c  jcphuff.c  jdcolor.c  jddctmgr.c  jfdctfst.c  jidctfst.c
src/contrib/src/zlib/: adler32.c
src/core/: CMakeLists.txt
src/core/app/: pch.h  sampleApp.cpp  sampleWorld.cpp
src/core/base/: autoptr.cpp  backward_signal.cpp  boundingVolume.cpp  clock.cpp  codepage.cpp  codepageICONV.cpp  codepageICONV.h  codepageMSWIN.cpp  codepageMSWIN.h  codepageXenon.cpp  codepageXenon.h  core.cpp  coreLog.cpp  debug.cpp  dict.cpp  endian.cpp  exception.cpp  file.cpp  filesys.cpp  hashmap.cpp  log.cpp  memory.cpp  misc.cpp  path.cpp  pch.h  profiler.cpp  registry.cpp  sharedLib.cpp  string.cpp  variant.cpp  xml.cpp
src/core/cegui/: ceguiHeaders.h  ceguiRenderer.cpp  ceguiRenderer.h  ceguiTexture.cpp  ceguiTexture.h
src/core/engine/: engine_base.cpp  pch.h  skinned_mesh.cpp  spacial_component.cpp  static_mesh.cpp  visual_component.cpp
src/core/gfx/base/: colorFormat.cpp  image.cpp  imageBMP.cpp  imageDDS.cpp  imageDDS.h  imageJPG.cpp  imageJPG.h  imagePNG.cpp  imageTGA.cpp  pch.cpp  pch.h  shape.cpp
src/core/gfx/d3d/: d3d11App.cpp  d3d11Sprite.cpp  d3d11StateDumper.cpp  d3d11Text.cpp  d3d11Utils.cpp  d3d9App.cpp  d3d9ShaderUtils.cpp  d3d9ThickLine.cpp  dxgiTextureFormat.cpp  pch.h
src/core/gfx/gpures/: effectresource.cpp  effectresource.h  effectresourcedesc.cpp  genStdUniform.cmd  gpuresdb.cpp  gpuresdb.h  meshresource.cpp  meshresource.h  meshresourcedesc.cpp  modelresource.cpp  modelresource.h  pch.h  simpleDiffuseModel.cpp  stdUniform.cpp  (+6 more)
src/core/gpu/: gpupch.h
src/core/gpu2/: gpu2Creator.cpp  shaderCompiler.cpp
src/core/input/: basicInput.cpp  basicInput.h  basicInput.inl  basicInputMsw.cpp  basicInputMsw.h  basicInputXInput.cpp  basicInputXInput.h  input.cpp  inputDInput.cpp  inputDInput.h  inputMsw.cpp  inputMsw.h  inputX11.cpp  inputX11.h  pch.h
src/core/rdg/: CMakeLists.txt  TODO.md  backbuffer-actions.cpp  backbuffer.cpp  backbuffer.h  buffer.cpp  compile_pbr_shaders.py  dependency-graph.cpp  draw-actions.cpp  gpu-context.cpp  gpu-context.h  pbr-frag.spv.h  pbr-shading.cpp  pbr-vert.spv.h  pch.h  rendertarget.cpp  runtime-type.cpp  runtime-type.h  shared-shader-constants.cpp  submission.cpp  submission.h  texture-readback-actions.cpp  texture.cpp  texture.h  transform.cpp  vk-backbuffer.cpp  vk-backbuffer.h  vk-buffer.cpp  vk-buffer.h  vk-command-buffer.cpp  vk-command-buffer.h  vk-commandbuffer.cpp  vk-commandbuffer.h  vk-draw-actions.cpp  vk-draw-actions.h  vk-format-utils.cpp  vk-format-utils.h  vk-gpu-context.cpp  vk-gpu-context.h  vk-pso-factory.cpp  (+9 more)
src/core/render-graph/: action.cpp  render-graph.cpp
src/core/util/: arcball.cpp  fpcamera.cpp  pch.h
src/core/vk/: barrier.cpp  device.cpp  device.h  info.cpp  info.h  pch.h  vk.cpp
src/core/vulkan/: barrier.cpp  device.cpp  device.h  handle.cpp  info.cpp  info.h  pch.h  queue.cpp  vk.cpp
src/core/win/: pch.h  win.cpp  window-glfw.cpp  window-glfw.h  windowMsw.cpp  windowMsw.h  windowQt.cpp  windowQt.h  windowX11.cpp  windowX11.h
src/priv/base/: CMakeLists.txt  SConscript  SConscript2  assert.cpp  boundingVolume.cpp  debug.cpp  image.cpp  image_dds.cpp  image_jpg.cpp  log.cpp  makefile.scons  misc.cpp  ntWindow.cpp  path.cpp  pch.h  sharedLib.cpp  string.cpp  variant.cpp  winUtils.cpp  xWindow.cpp
src/private/core/: CMakeLists.txt  makefile.scons
src/private/test/: CMakeLists.txt  makefile.scons  testapp.h
src/sample/optix/: CMakeLists.txt  bin2h.cmake  main.cpp  pch.h  shared.h  str2h.cmake  trace.cu
src/sample/portal/: CMakeLists.txt  bsptree.cpp  bsptree.h  clipfrustum.cpp  clipfrustum.h  level.cpp  level.h  level_collide.cpp  level_pvs.cpp  lvlFileStruct.cpp  lvlFileStruct.h  math.h  math.inl  math_clip.cpp  math_intersection.cpp  pch.h  portal.cpp  portal.h  portaldemo.cpp  portaldemo.h  sector.cpp  sector.h
src/sample/rdg/: .gitignore  CMakeLists.txt  compile_shaders.py  draw-mesh.cpp  hello-world.cpp  pch.h  simple-triangle.cpp  solid-triangle-frag.spv.h  solid-triangle-vert.spv.h  solid-triangle.frag  solid-triangle.vert  solid_triangle.vert  solid_triangle_vert.spv.h
src/test/: CMakeLists.txt  testapp.h
src/test/assimp/: main.cpp  pch.h
src/test/cegui/: ceguiApp.h  main.cpp  pch.h
src/test/cuda/: CMakeLists.txt
src/test/d3d11/: CMakeLists.txt  Effect.h  EffectAPI.cpp  EffectBinaryFormat.h  EffectLoad.cpp  EffectLoad.h  EffectNonRuntime.cpp  EffectReflection.cpp  EffectRuntime.cpp  EffectStateBase11.h  EffectStates11.h  EffectVariable.inl  SOParser.h  d3dx11dbg.cpp  d3dx11dbg.h  d3dx11effect.h  d3dxGlobal.cpp  d3dxGlobal.h  main.cpp  makefile.scons  pch.h
src/test/d3d12/: main.cpp  pch.h
src/test/d3d9/: main.cpp
src/test/engine/: main.cpp
src/test/font/: main.cpp
src/test/foo/: CMakeLists.txt  foo.cpp
src/test/ft2/: main.cpp  pch.h
src/test/gpu/: main.cpp
src/test/gpu2/: main.cpp  pch.h
src/test/input/: main.cpp  pch.h
src/test/pcre/: main.cpp
src/test/rdg/: CMakeLists.txt  smoke1.cpp
src/test/renderToTexture/: main.cpp  pch.h
src/test/resdb/: main.cpp  pch.h
src/test/rt/: main.cpp
src/test/simd/: directxmath.h  main.cpp
src/test/sprite/: main.cpp
src/test/stack-dump/: main.cpp
src/test/ut/: CMakeLists.txt  cxxtestgen.py  testCommon.cpp  testCommon.h
src/test/vulkan/: CMakeLists.txt  main.cpp  pch.h
src/test/xml/: main.cpp  pch.h
(+6727 files in other folders)
