function(add_simple_test folder)
    # determine target name
    if (ARGV1)
        set(test_name ${ARGV1})
    else()
        string(SUBSTRING ${folder} 0 1 first_char)
        string(TOUPPER ${first_char} first_char_upper_case)
        string(SUBSTRING ${folder} 1 -1 remaining)
        string(CONCAT test_name ${first_char_upper_case} ${remaining})
    endif()

    # create target executable
    #message("create simple app = ${folder} ${test_name}")
    GN_setup_pch(${folder}/main.cpp PCH_SOURCE ${folder}/pch.cpp)
    string(CONCAT target_name GNtest ${test_name})
    add_executable(${target_name} ${folder}/main.cpp ${folder}/pch.cpp ${folder}/pch.h)
    target_link_libraries(${target_name} GNcore)
endfunction()

if (GLUT_FOUND)
    add_simple_test(assimp)
endif()
#add_subdirectory(cegui)
if (D3D9_FOUND)
    add_simple_test(d3d9 D3D9)
endif()
#add_subdirectory(d3d11)
if (D3D12_FOUND)
    add_simple_test(d3d12 D3D12)
endif()
add_simple_test(engine)
add_simple_test(font)
if (GLUT_FOUND)
    add_simple_test(ft2 FT2)
endif()
add_simple_test(gpu)
add_simple_test(gpu2)
add_simple_test(input)
add_simple_test(pcre PCRE)
add_simple_test(renderToTexture)
add_simple_test(resdb ResDB)
add_simple_test(rt)
#add_simple_test(simd SIMD)
add_simple_test(sprite)
add_subdirectory(ut)
add_subdirectory(vulkan)
add_simple_test(xml XML)
